--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "devDependencies": {
     "@playwright/test": "^1.28.1",
+    "@supabase/auth-helpers-sveltekit": "^0.8.6",
     "@supabase/supabase-js": "^2.2.0",
     "@sveltejs/adapter-auto": "^1.0.0-next.90",
     "@sveltejs/kit": "^1.0.0-next.587",
