--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "type": "module",
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
+    "@playwright/test": "^1.29.0",
     "@supabase/auth-helpers-sveltekit": "^0.8.6",
-    "@supabase/supabase-js": "^2.2.0",
-    "@sveltejs/adapter-auto": "^1.0.0-next.90",
-    "@sveltejs/kit": "^1.0.0-next.587",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
+    "@supabase/supabase-js": "^2.2.1",
+    "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/kit": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^2.9.2",
+    "prettier": "^2.8.1",
+    "prettier-plugin-svelte": "^2.9.0",
+    "svelte": "^3.55.0",
+    "svelte-check": "^2.10.2",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vitest": "^0.25.3"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.2",
+    "vitest": "^0.25.8"
   },
   "scripts": {
     "dev": "vite dev",
